fix(core): adjust calculation method for overflow layout (#8453)
* fix(core): adjust calculation method

* fix(core): add correct more button width calculation

--- a/apps/docs/src/app/core/component-docs/overflow-layout/examples/complex/overflow-layout-complex-example.component.scss
+++ b/apps/docs/src/app/core/component-docs/overflow-layout/examples/complex/overflow-layout-complex-example.component.scss
@@ -1,8 +1,11 @@
-.fd-avatar-group {
+.fd-overflow-layout.fd-avatar-group {
+    justify-content: start;
     .fd-overflow-layout__item {
         position: relative;
         &:not(:first-child) {
-            margin-left: -1rem;
+            fd-avatar {
+                margin-left: -1rem;
+            }
         }
         &:hover {
             z-index: 20;
@@ -17,6 +20,10 @@
         font-size: 1.125rem;
         border-radius: 25rem;
         border-width: var(--fdAvatarGroup_MoreButton_Border);
+    }
+
+    .fd-overflow-layout__more {
+        margin-left: -1rem;
     }
 }
 
